# MidiKraft-synths-ci

./: .gitmodules  CMakeLists.txt  PluginTest.cpp  README.md  appveyor.yml
docker/buildmachine/: Dockerfile  buildBuildmachine.bat  makeLinux.bat
